WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212063
[iOS] Programmatic scroll of "scrolling=no" iframe fails
https://bugs.webkit.org/show_bug.cgi?id=212063
Summary
[iOS] Programmatic scroll of "scrolling=no" iframe fails
Simon Fraser (smfr)
Reported
2020-05-18 22:27:43 PDT
[iOS] Programmaic scroll of "scrolling=no" iframe fails
Attachments
Patch
(5.50 KB, patch)
2020-05-18 22:31 PDT
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
Patch
(18.15 KB, patch)
2020-05-19 09:26 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-18 22:31:38 PDT
Created
attachment 399711
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-18 22:31:41 PDT
<
rdar://problem/57049514
>
Simon Fraser (smfr)
Comment 3
2020-05-19 09:26:50 PDT
Created
attachment 399741
[details]
Patch
EWS
Comment 4
2020-05-19 11:24:01 PDT
Committed
r261874
: <
https://trac.webkit.org/changeset/261874
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399741
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug